FIX; ubtton overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ button.votar {
 
 .slide-1 img.tarjetones {
 	margin-top:10px;
-	height: 60vh;
+	height: calc(60vh - 40px);
 }
 
 .slide-6 p {
